--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,56 @@
-# .github/workflows/deploy.yml
-name: Deploy to GitHub Pages
+name: Deploy simple site to Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"] # Or your default branch
   workflow_dispatch:
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+permissions:
+  contents: read    # Allow checkout
+  pages: write      # Allow deployment to Pages
+  id-token: write   # Allow OIDC token generation for Pages deployment
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  # ---- NEW LINTING JOB ----
+  lint:
+    name: Lint Codebase
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          # Full git history is needed for super-linter to identify changed files
+          fetch-depth: 0
+      - name: Run Super-Linter
+        uses: github/super-linter@v5 # Use the latest version
+        env:
+          VALIDATE_ALL_CODEBASE: false # Only lint changed files to be faster
+          DEFAULT_BRANCH: main       # Your default branch
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed for the linter
+
+  # ---- DEPLOY JOB (MODIFIED) ----
+  deploy:
+    needs: lint # <<< ADD THIS LINE: Deploy only if linting passes
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          # Upload entire repository.
+          # If your site files are in a subfolder like 'dist' or 'public',
+          # change this to: path: './dist' or path: './public'
           path: '.'
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
